# eza-themes-picker

./: .gitignore  README.md  eza_themes_picker.py  justfile  pyproject.toml
