[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eza-themes-picker"
description = "Command line tool to select and activate themes from the eza-themes project"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
keywords = ["eza", "eza-themes"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "argparse-from-file",
  "platformdirs",
]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/eza-themes-picker"

[project.scripts]
eza-themes-picker = "eza_themes_picker:main"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

# vim:se sw=2:
